--- a/css/style.css
+++ b/css/style.css
@@ -1190,7 +1190,7 @@ section.affordable {
 }
 
 .text_wrapper.blog_first {
-    background: url(../img/landmark.jpg);
+    background: url(../img/lanmark.jpg);
     background-size: cover;
     background-position: center;
 }
