--- a/css/style.css
+++ b/css/style.css
@@ -1069,7 +1069,7 @@ section.newsletter.download-app {
 
 .thessa-inner.hotel_inner img {
     width: 100%;
-    height: unset;
+    height: 300px;
 }
 
 .content {
