--- a/css/responsive.css
+++ b/css/responsive.css
@@ -66,6 +66,10 @@
         text-align: center;
     }
 
+    .thessa-inner.hotel_inner {
+        text-align: left;
+    }
+
     .para_hotel img {
         max-width: 100%;
         margin: 0;
@@ -136,9 +140,11 @@
     h2 {
         font-size: 30px;
     }
+
     section.affordable {
         padding: 20px 0;
     }
+
     .footer_logo img {
 
         margin-bottom: 30px;
