--- a/css/slick-theme.css
+++ b/css/slick-theme.css
@@ -192,7 +192,7 @@
     text-align: center;
 
     opacity: .25;
-    color: black;
+    color: #0b8d93;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
