--- a/css/style.css
+++ b/css/style.css
@@ -715,7 +715,7 @@ a.btn.btn-primary.setting-cookies:hover {
 
 .panel-default>.panel-heading {
     color: #333;
-    background-color: #fff;
+    background-color: transparent;
     border-color: #e4e5e7;
     padding: 0;
     -webkit-user-select: none;
