--- a/css/style.css
+++ b/css/style.css
@@ -653,59 +653,58 @@ a.btn_pri:hover {
 }
 
 /* /cookie start/ */
-.cookie-alert {
+/* Cookies CSS Start */
+.wrapper {
     position: fixed;
-    bottom: 0;
-    right: 0;
+    bottom: -100%;
     width: 100%;
-    margin: 0 !important;
-    z-index: 999;
-    opacity: 0;
-    transform: translateY(100%);
-    transition: all 500ms ease-out;
-    left: 0;
+    background-color: #0b8d93;
+    padding: 15px 25px 22px;
+    transition: all 1s ease-in-out;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
-.cookie-alert .btn {
+.wrapper.show {
+    bottom: 0;
+}
+
+.info {
+    margin-bottom: 15px;
+}
+
+.info p {
+    font-size: 15px;
     color: #fff;
-    background-color: var(--primary-color);
-    border-color: #ffffff;
+    font-weight: 400;
 }
 
-.cookie-alert .btn:hover {
-    color: var(--primary-color);
-    background-color: #fff;
-    border-color: var(--primary-color);
-}
-
-.cookie-alert.show {
-    opacity: 1;
-    transform: translateY(0%);
-    transition-delay: 1000ms;
-}
-
-p.card-text {
-    margin-bottom: 20px;
-}
-
-a.btn.btn-primary.setting-cookies {
-    background: var(--primary-color);
-    border-color: var(--primary-color);
-    color: var(--main-color);
-    padding-bottom: 0;
-    margin-right: 14px;
-
-}
-
-.btn-toolbar {
+.buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     gap: 10px;
 }
 
-a.btn.btn-primary.setting-cookies:hover {
-    color: var(--primary-color);
-    background-color: var(--main-color);
-    border-color: var(--primary-color);
+.button {
+    width: calc(30% / 2 - 10px);
+    padding: 8px 0;
+    border: none;
+    border-radius: 4px;
+    background-color: #FFF;
+    color: #0b8d93;
+    cursor: pointer;
+    transition: all 0.7s ease;
+    font-weight: 600;
+    border: 1px solid #fff;
 }
+
+.button:hover {
+    background-color: #0b8d93;
+    color: #fff;
+}
+
+/* Cookies CSS End */
 
 /* 
 
