--- a/css/style.css
+++ b/css/style.css
@@ -711,7 +711,10 @@ a.btn.btn-primary.setting-cookies:hover {
     padding: 80px 0;
     background: #ededed;
 }
-
+.btn-toolbar {
+    gap: 10px;
+    margin-top: 30px;
+}
 .panel-default>.panel-heading {
     color: #333;
     background-color: transparent;
